<resources>
    <string name="app_name">WPAM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="facebook_app_id">683052985852387</string>
    <string name="fb_login_protocol_scheme">fb683052985852387</string>
    <string name="tourist_app">Tourist App</string>
    <string name="server_client_id">999172525453</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="resend_verification_link">Resend verification link</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_out">Sign Out</string>
    <string name="textview">TextView</string>
    <string name="set_description">set Description</string>
    <string name="description">Description</string>
    <string name="user_data">User Data</string>
    <string name="update_user_data">Update User Data</string>
    <string name="name">Name</string>
    <string name="userprofileimage">userProfileImage</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_route_creator">Route Creator</string>
    <string name="title_get_points">Get Points</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_profile">Profile</string>
</resources>
