<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wpam.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_userListFragmet"
            app:destination="@id/userListFragmet" />
    </fragment>

    <fragment
        android:id="@+id/navigation_route_creator"
        android:name="com.example.wpam.ui.dashboard.DashboardFragment"
        android:label="@string/title_route_creator"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="com.example.wpam.ui.ranking.RankingFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_ranking" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.wpam.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_get_points"
        android:name="com.example.wpam.ui.points.GetPointsFragment"
        android:label="@string/title_get_points" >
        <action
            android:id="@+id/action_navigation_get_points_to_search"
            app:destination="@id/navigation_landmark_list"
            app:popUpTo="@id/navigation_get_points" />
    </fragment>
    <fragment
        android:id="@+id/navigation_landmark_list"
        android:name="com.example.wpam.ui.landmarkList.LandmarkListFragment"
        android:label="Landmark List"
        tools:layout="@layout/fragment_landmark_list" />
    <fragment
        android:id="@+id/userListFragmet"
        android:name="com.example.wpam.ui.user_list.UserListFragmet"
        android:label="fragment_user_list"
        tools:layout="@layout/fragment_user_list" />
</navigation>
