<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editData.EditDataFragment">

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileImage" />

    <Button
        android:id="@+id/setUserDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="120dp"
        android:text="@string/update_user_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescriptionField" />

        <EditText
            android:id="@+id/editNameField"
            android:layout_width="202dp"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

        <EditText
            android:id="@+id/editDescriptionField"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNameField" />

        <ImageView
            android:id="@+id/userProfileImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/userprofileimage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

    <Button
        android:id="@+id/takePictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:width="110dp"
        android:text="Take Picture"
        app:layout_constraintBottom_toTopOf="@+id/descriptionText"
        app:layout_constraintStart_toEndOf="@+id/userProfileImage" />

</androidx.constraintlayout.widget.ConstraintLayout>